# yt-analytics-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ytanalytics/: __init__.py  api.py  auth.py  cli.py  dashboard.py  errors.py  models.py  output.py  performance_dashboard.py  service.py
src/ytanalytics/web/performance/: app.js  index.html  styles.css
tests/: test_api.py  test_auth.py  test_dashboard.py  test_models.py  test_output.py  test_performance_dashboard.py  test_service.py
