[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ytanalytics-cli"
version = "0.1.0"
description = "A scriptable YouTube Analytics CLI and reusable Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-auth>=2.35",
  "google-auth-oauthlib>=1.2",
  "httpx>=0.27",
  "keyring>=25.4",
  "pydantic>=2.9",
  "python-dotenv>=1.0",
  "rich>=13.9",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=5", "respx>=0.21", "ruff>=0.7"]

[project.scripts]
yt = "ytanalytics.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ytanalytics"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
